--- a/bitacora.ipynb
+++ b/bitacora.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Dia 1: En el dia de hoy vamos a plantearnos como definimos a los autos. Estamos defininendo como los autos entran a la autopista y que atributos tienen los autos.\n",
+    "Dia 1 27/8 : En el dia de hoy vamos a plantearnos como definimos a los autos. Estamos defininendo como los autos entran a la autopista y que atributos tienen los autos.\n",
     "\n",
     "La idea principal que tuvimos fue hacer que la carretera sea una lista enlazada.\n",
     "\n",
