--- a/bitacora.ipynb
+++ b/bitacora.ipynb
@@ -18,6 +18,15 @@
     "\n",
     "podemos poner un cooldown para removerlos."
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Dia 2: La idea de hoy es calcular como cambia la aceleracion de los autos.\n",
+    "\n",
+    "Estuvimos revisando varios papers que explican como varia el modelo de aceleracion del auto."
+   ]
   }
  ],
  "metadata": {
