--- a/bitacora.ipynb
+++ b/bitacora.ipynb
@@ -25,13 +25,37 @@
    "source": [
     "Dia 2: La idea de hoy es calcular como cambia la aceleracion de los autos.\n",
     "\n",
-    "Estuvimos revisando varios papers que explican como varia el modelo de aceleracion del auto."
+    "Estuvimos revisando varios papers que explican como varia el modelo de aceleracion del auto.\n",
+    "\n",
+    "Finalmente llegamos a concluir que la formula de aceleración que vamos a utilizar es la del siguiente papaer:https://traffic-simulation.de/info/info_IDM.html\n",
+    "\n",
+    "Donde la función se escribe de la siguiente manera:\n",
+    "\n",
+    "$acl = acl_{max}*(1 - (\\frac{v}{v_0})^4 - \\frac{s^*}{s})$\n",
+    "\n",
+    "This formula represents a simplified relationship between the desired distance and the time gap that drivers aim to maintain.\n",
+    "\n",
+    "$s^* = T*v_l$"
    ]
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "base",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.9.13"
   },
   "orig_nbformat": 4
  },
