--- a/bitacora.ipynb
+++ b/bitacora.ipynb
@@ -42,7 +42,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Dia 3: Estamos intentando agregar ruido a la aceleracion para agregar la incertidumbre dentro del manejo. Ademas intentaremos mejorar la clase autopista para poder hacer analisis. Le agregamos un ID a cada auto para saber identficarlos y trataremos de modelar la probabilidad de entrar a la autopista"
+    "Dia 3: Estamos intentando agregar ruido a la aceleracion para agregar la incertidumbre dentro del manejo. Ademas intentaremos mejorar la clase autopista para poder hacer analisis. Le agregamos un ID a cada auto para saber identficarlos y trataremos de modelar la probabilidad de entrar a la autopista\n",
+    "\n",
+    "Analisis del choque."
    ]
   }
  ],
